# copa

./: CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md  build.zig  build.zig.zon
src/: CMakeLists.txt  main.cpp  main.zig
src/generator/: generator.cpp  generator.h
src/lexer/: definitions.h  lexer.cpp  lexer.h  token_definitions.h
src/logger/: logx.h  logx_linux.h
src/parser/: parser.cpp  parser.h
test/: test.c  test_edge.c  test_multiline.c  test_selfref.c
